# crawl-gpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DEPENDENCIES.md  PLAYWRIGHT.md  REFERENCE.md
scrape_gpt/: app.py  app_langgraph.py  chat.py
scrape_gpt/prompt/: system.md
scrape_gpt/tools/: __init__.py  create.py  export_dataframe.py  extract_subpages.py
tests/: test_animal.py  test_epd.py  test_ranch.py
