[tool.poetry]
name = "scrape-gpt"
version = "0.1.0"
description = ""
authors = ["Abdurrahman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.55.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"
langchain-google-genai = "^2.1.10"
langgraph = "^0.6.7"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
nest-asyncio = "^1.6.0"
browser-use = "^0.7.6"
scrapegraphai = "^1.62.0"
langchain-experimental = "^0.3.4"
pandas = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
